feat: add users stuff
